Improved buffer size hint